--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "cloudinary-labs/cloudinary-laravel": "^1.0",
         "cviebrock/eloquent-sluggable": "^8.0",
         "fabpot/goutte": "^4.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "jrm2k6/cloudder": "^0.6.0",
+        "kreait/laravel-firebase": "^3.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "tymon/jwt-auth": "^1.0"
